--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,22 @@
+version: "3.9"
+
 services:
   flask-app:
-    platform: linux/amd64
-    build: ./flask-app
-    image: python:3.10
+    build: .
     ports:
-      - "8080:8080"
+      - "5000:5000"
+    volumes:
+      - .:/app
     depends_on:
-      psql-app:
-        condition: service_healthy
+      - psql-app
+
   psql-app:
-    platform: linux/amd64
-    build: ./psql-app
     image: postgres:14.5
     environment:
       POSTGRES_PASSWORD: test
       POSTGRES_USER: postgres
     volumes:
-      - psql-db:/var/lib/postgresql/data
-    healthcheck:
-      test:  ["CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres"]
-      interval: 1s
-      timeout: 5s
-      retries: 10
+      - pgdata-project2:/var/lib/postgresql/data/pgdata
 
 volumes:
-  psql-db:
+  pgdata-project2:
