--- a/flask-app/Dockerfile
+++ b/flask-app/Dockerfile
@@ -7,5 +7,5 @@ COPY templates templates/
 
 ENV FLASK_ENV=development
 ENV FLASK_DEBUG=1
-RUN pip3 install flask gunicorn psycopg2-binary PyGithub Flask-WTF Flask-Bootstrap4 flask-login Flask-SQLAlchemy
+RUN pip3 install flask gunicorn psycopg2-binary PyGithub Flask-WTF Flask-Bootstrap4 flask-login  bcrypt Flask-SQLAlchemy
 CMD ["gunicorn", "--chdir", "/app", "app:app", "-b", "0.0.0.0:5000"]
